--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -284,7 +284,7 @@ knitr::include_graphics(path)
 
 ### Lengthscale
 
-(ref:lengthscale-posteriors) The lengthscale hyperparameter prior and posterior distributions for each of the four considered PHIA surveys (Table \@ref(hiv-surveys)).
+(ref:lengthscale-posteriors) The lengthscale hyperparameter prior and posterior distributions for each of the four considered PHIA surveys (Table \@ref(tab:hiv-surveys)), using both the CK and IK inferential models.
 
 ```{r lengthscale-posteriors, fig.cap="(ref:lengthscale-posteriors)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/lengthscale-posteriors.png"))
@@ -292,7 +292,7 @@ knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/
 
 ### BYM2 proportion
 
-(ref:proportion-posteriors) The BYM2 proportion hyperparameter prior and posterior distributions for each of the four considered PHIA surveys (Table \@ref(hiv-surveys)). A value of zero corresponds to IID noise. A value of one corresponds to Besag noise. For each survey, apart from the Côte d’Ivoire 2017 PHIA, the posterior distribution for the BYM2 proportion is concentrated towards a value of one. This result can be interpreted as suggesting that the variation in HIV prevalence from these surveys is spatially structured.
+(ref:proportion-posteriors) The BYM2 proportion hyperparameter prior and posterior distributions for each of the four considered PHIA surveys (Table \@ref(tab:hiv-surveys)). A value of zero corresponds to IID noise. A value of one corresponds to Besag noise. For each survey, apart from the Côte d’Ivoire 2017 PHIA, the posterior distribution for the BYM2 proportion is concentrated towards a value of one. This result can be interpreted as suggesting that the variation in HIV prevalence from these surveys is spatially structured.
 
 ```{r proportion-posteriors, fig.cap="(ref:proportion-posteriors)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/proportion-posteriors.png"))
