Improve figure caption

--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -72,7 +72,7 @@ The most important speed enhancement would likely come from using the simplified
 Usability would be improved by integration of the method into statistical software, first and foremost via the `aghq` package.
 The primary difficulty, as it appears now, which would have to be overcome is that the `random` argument of `TMB::MakeADFun` does not allow indexing.
 
-(ref:conditional-simulation-diff-k-fixed) For the Loa loa ELGM, increasing the number of quadrature nodes per hyperparameter dimension from $k = 3$ to $k = 7$ did little to improve accuracy. On the other hand, using Laplace marginals with $k = 3$ rather than Gaussian marginals did have a substantial effect (Figures \@ref(fig:conditional-simulation-phi-diff-fixed) and \@ref(fig:conditional-simulation-rho-diff-fixed)).
+(ref:conditional-simulation-diff-k-fixed) For the Loa loa ELGM, increasing the number of quadrature nodes per hyperparameter dimension from $k = 3$ to $k = 7$ did little to improve accuracy. On the other hand, using Laplace marginals rather than Gaussian marginals did have a substantial effect (Figures \@ref(fig:conditional-simulation-phi-diff-fixed) and \@ref(fig:conditional-simulation-rho-diff-fixed)). More broadly, it would be valuable to better understand, and aspirationally have diagnostics for, the circumstances under which more accurate approximations are required.
 
 ```{r conditional-simulation-diff-k-fixed, fig.cap="(ref:conditional-simulation-diff-k-fixed)"}
 knitr::include_graphics("figures/naomi-aghq/conditional-simulation-diff-k-fixed.png")
