--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -24,8 +24,8 @@ This chapter concludes the thesis by discussing the most important contributions
 ## Contributions
 
 Chapter \@ref(beyond-borders) used tools for model assessment such as proper scoring rules and posterior predictive checks to comprehensively compare adjacency- and kernel-based models for spatial structure.
-Useful data for practitioners.
-Useful to base methodological developments on.
+The experiments conducted provide useful data to guide the use of spatial random effect models by applied practitioners, as well as to base methodological developments on.
+The most important findings were as follows.
 
 (ref:global-update) Panel A shows the front page of @unaids2023global. Panel B shows the page containing text and a figure based on the work done in Chapter \@ref(multi-agyw). In this figure, 30 countries are included.
 
