--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -1,26 +1,29 @@
-I would express my gratitude to Seth Flaxman and Jeff Eaton for their mentorship throughout my time as a graduate student.
-Their guidance has been crucial in shaping the direction of this thesis, and my development as a scientist.
+I would first like to express my gratitude to Seth Flaxman and Jeff Eaton for their mentorship.
+Their guidance has been crucial in shaping this thesis, and my development as a scientist.
 <!-- Thanks to my examiners Adam Sykulski and Chris Paciorek. -->
-I am grateful to the HIV Inference Group at Imperial for exposing me to research focused on providing actionable evidence, helping me learn to present my research, and tolerating a mathematician.
-Research environment provided by the Modern Statistics and Statistical Machine Learning Centre for Doctoral Training at Imperial and Oxford and the Machine Learning and Global Health Network.
-This research was made possible by funding provided by the Bill & Melinda Gates Foundation and EPSRC.
+I am thankful that the HIV Inference Group at Imperial tolerated a mathematician, helped me learn to present my work, and exposed me to purpose-driven research.
+I am grateful too for the environment provided by the Modern Statistics and Statistical Machine Learning Centre for Doctoral Training at Imperial and Oxford, and the Machine Learning and Global Health Network.
+Thanks to Antoine, Chris, Enrico, Phil, Yanni, Theo, Tim, Liza, and Theo for conversations, some of which were about research.
+This work was made possible by funding provided by the EPSRC and Bill & Melinda Gates Foundation.
+There are many worse ways to spend billions of dollars than fighting poverty and disease.
 
-Thank you to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab.
-Thanks also to the friends I met in Cambridge: Lenni, Lenny, Janika, Geetha, Simon, Frances, Leilani and Tammy.
-I returned from Cambridge stand-up meeting, Google document, and raised aspirations in hand.
+Thanks to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab.
+I left Cambridge with Google document templates, raised aspirations, new friends, and only slightly terrified about the future.
+Thanks to Lenni, Lenny, Janika, Geetha, Simon, Phil, Frances, Leilani and Tammy.
 
-Thank you to Alex Stringer, and the Department of Statistics and Actuarial Science, for hosting my visit to the University of Waterloo.
-Without Alex, Chapter \@ref(naomi-aghq) wouldn't have gotten anywhere, and I'd still be waiting for MCMC to converge in Chapter \@ref(beyond-borders).
-Thanks to Tim Lucas and Patrick Brown for connecting us.
-Thanks also to my tour guide in Waterloo, Kate.
-I would also like to express my thanks to Håvard Rue and Finn Lindgren for their helpful answers on the `R-INLA` discussion group.
+Thanks to Alex Stringer, and the Department of Statistics and Actuarial Science, for hosting my visit to the University of Waterloo.
+Chapter \@ref(naomi-aghq) would not have been possible without Alex.
+I'd likely still be waiting Markov chains began in Chapter \@ref(beyond-borders) to converge.
+Thanks to Tim Lucas and Patrick Brown for putting me in touch with Alex, and Håvard Rue and Finn Lindgren for helpful answers on the `R-INLA` discussion group.
+Thanks also to Kate, my tour guide in Waterloo, and Midtown Yoga for helping me stay balanced.
 
-My sense for what matters has been shaped, and arguably improved, by the Effective Altruism community.
+My sense for what matters has been shaped, and I'd argue improved, by the Effective Altruism community.
 Thank you to the Meridian, Trajan, and LEAH offices for hosting me this final year.
-Thank you to my housemates August, Dewi, Henry, Jerome, Johnny, and Tamara: not to be all Bay area, but I'm proud of the intentional community we've built.
+Thanks to my housemates in Hackney: August, Dewi, Henry, Jerome, Johnny, and Tamara.
+Not to be all Bay area, but I'm proud of the community we've built.
 Pınar believed in me and my research at times when I didn't.
 No thanks to Simon Marshall, he didn't help, if anything he held me back.
-I extend my deepest thanks to my parents, Deborah and Karl, and my grandparents, Kath and Tony, whose love and support have granted me the privilege of pursuing my interests.
+I extend my deepest thanks to my parents, Deborah and Karl, and my grandparents, Kath and Tony, whose love and support have granted me the privilege to pursue my interests.
 
 \begin{flushright}
 Adam Howes \\
